You can now write PAPER:10606 and the plugin will smartly realize that since 10,606 is greater than a max stack size of 64, you mean Custom Model Data, and it will spawn 1 Paper with CMD 10606.
The default config for items.yml has been simplified to custom-model-data: 1001 (as a flat integer), meaning the auto-updater will no longer corrupt your component lists!